--- a/css/slick.css
+++ b/css/slick.css
@@ -80,7 +80,6 @@
     float: left;
 
     height: 100%;
-    min-height: 1px;
 }
 [dir='rtl'] .slick-slide
 {
